fix gaps

--- a/learning-angular/src/app/components/main-page/main-page.component.css
+++ b/learning-angular/src/app/components/main-page/main-page.component.css
@@ -49,6 +49,7 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
+  gap: 10px;
   font-weight: 500;
 }
 
@@ -76,10 +77,9 @@
   gap: 10px;
 }
 
-.frameworks__2 {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
+.frameworks>p,
+.frameworks__1>p {
+  margin: 0;
 }
 
 .btn__info,
